Fix images being too tall

--- a/src/styles/Body.css
+++ b/src/styles/Body.css
@@ -158,6 +158,8 @@
 }
 
 .overlay .full {
+    max-width: 100%;
+    max-height: 100%;
     height: auto;
     object-fit: contain;
     display: block;
